# MEng-Individual-Project

./: .gitignore  README.md  main.py  pyproject.toml
config/: newscommentary_enfr.yaml
data/: download_data.ipynb
models/emea/: README.md  tokenizer_config.json
models/news_commentary/: adapter_config.json
runs/n300_k128/: config.txt
runs/n300_k128/finetuned/results/: emea_af_front.csv  news_commentary_af_front.csv  opus_books_af_front.csv
src/: af_front_pipeline_stages.py  baseline_fronts.py  config.py  finetune_domain.py  finetuned_fronts.py  load_and_split_data.py  pipeline_emea_af_front.py  plot_finetuned_on_front.py
