[project]
name = "meng-individual-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=2.18",
    "evaluate>=0.4.6",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "protobuf>=6.33.5",
    "sacrebleu>=2.6.0",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=4.38",
]
